<?xml version="1.0"?>
<package format="3">
  <name>passbutter_controller</name>
  <version>0.0.0</version>
  <description>passbutter controller</description>
  <maintainer email="manuel.meyer.extern@googlemail.com">Manuel Meyer</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <build_depend>pluginlib</build_depend>

  <test_depend>controller_manager</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
