<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>passbutter_driver_demo_robot</name>
  <version>0.0.0</version>
  <description></description>

  <maintainer email="manuel.meyer.extern@googlemail.com">Manuel Meyer</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <depend>passbutter_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
